--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: CI
 
 on:
   push:
@@ -26,6 +26,21 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install All dependencies
+      # using npm ci is generally faster than npm install
+      run: | 
+        cd my-app
+        npm ci
+    - name: Build the app
+      run: |
+        cd my-app
+        npm run build --if-present
+    - name: Run the component test
+      run: |
+        cd my-app
+        npm test
+    - name: start the app
+      run: |
+        cd my-app
+        npm start &
+        npx wait-on --timeout 60000
