--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install All dependencies
       # using npm ci is generally faster than npm install
       run: | 
-        cd my-app
+        cd react-app
         npm ci
     - name: Build the app
       run: |
@@ -37,10 +37,10 @@ jobs:
         npm run build --if-present
     - name: Run the component test
       run: |
-        cd my-app
+        cd react-app
         npm test
     - name: start the app
       run: |
-        cd my-app
+        cd react-app
         npm start &
         npx wait-on --timeout 60000
